include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
void chpr2_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy, zynum_blas_complex_float *ap);
void zhpr2_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy, zynum_blas_complex_double *ap);
void sgemm_(const char *ta, const char *tb, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *k, const float *alpha, const float *a, const zynum_blas_int *lda, const float *b, const zynum_blas_int *ldb, const float *beta, float *c, const zynum_blas_int *ldc);
void dgemm_(const char *ta, const char *tb, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *k, const double *alpha, const double *a, const zynum_blas_int *lda, const double *b, const zynum_blas_int *ldb, const double *beta, double *c, const zynum_blas_int *ldc);
void cgemm_(const char *ta, const char *tb, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *b, const zynum_blas_int *ldb, const zynum_blas_complex_float *beta, zynum_blas_complex_float *c, const zynum_blas_int *ldc);
void zgemm_(const char *ta, const char *tb, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *b, const zynum_blas_int *ldb, const zynum_blas_complex_double *beta, zynum_blas_complex_double *c, const zynum_blas_int *ldc);
void ssymm_(const char *side, const char *u, const zynum_blas_int *m, const zynum_blas_int *n, const float *alpha, const float *a, const zynum_blas_int *lda, const float *b, const zynum_blas_int *ldb, const float *beta, float *c, const zynum_blas_int *ldc);
void dsymm_(const char *side, const char *u, const zynum_blas_int *m, const zynum_blas_int *n, const double *alpha, const double *a, const zynum_blas_int *lda, const double *b, const zynum_blas_int *ldb, const double *beta, double *c, const zynum_blas_int *ldc);
void csymm_(const char *side, const char *u, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *b, const zynum_blas_int *ldb, const zynum_blas_complex_float *beta, zynum_blas_complex_float *c, const zynum_blas_int *ldc);
void zsymm_(const char *side, const char *u, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *b, const zynum_blas_int *ldb, const zynum_blas_complex_double *beta, zynum_blas_complex_double *c, const zynum_blas_int *ldc);
void chemm_(const char *side, const char *u, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *b, const zynum_blas_int *ldb, const zynum_blas_complex_float *beta, zynum_blas_complex_float *c, const zynum_blas_int *ldc);
void zhemm_(const char *side, const char *u, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *b, const zynum_blas_int *ldb, const zynum_blas_complex_double *beta, zynum_blas_complex_double *c, const zynum_blas_int *ldc);
void ssyrk_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const float *alpha, const float *a, const zynum_blas_int *lda, const float *beta, float *c, const zynum_blas_int *ldc);
void dsyrk_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const double *alpha, const double *a, const zynum_blas_int *lda, const double *beta, double *c, const zynum_blas_int *ldc);
void csyrk_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *beta, zynum_blas_complex_float *c, const zynum_blas_int *ldc);