include/zynum/blas/blas.f90


    subroutine chpr2( &
        u, n, alpha, x, incx, y, &
        incy, ap &
    ) bind(C, name="chpr2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float), intent(inout) :: ap(*)
    end subroutine chpr2

    subroutine zhpr2( &
        u, n, alpha, x, incx, y, &
        incy, ap &
    ) bind(C, name="zhpr2_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double), intent(inout) :: ap(*)
    end subroutine zhpr2

    subroutine sgemm( &
        ta, tb, m, n, k, alpha, &
        a, lda, b, ldb, beta, c, &
        ldc &
    ) bind(C, name="sgemm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: ta
      character(kind=c_char), intent(in) :: tb
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine sgemm

    subroutine dgemm( &
        ta, tb, m, n, k, alpha, &
        a, lda, b, ldb, beta, c, &
        ldc &
    ) bind(C, name="dgemm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: ta
      character(kind=c_char), intent(in) :: tb
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine dgemm

    subroutine cgemm( &
        ta, tb, m, n, k, alpha, &
        a, lda, b, ldb, beta, c, &
        ldc &
    ) bind(C, name="cgemm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: ta
      character(kind=c_char), intent(in) :: tb
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine cgemm

    subroutine zgemm( &
        ta, tb, m, n, k, alpha, &
        a, lda, b, ldb, beta, c, &
        ldc &
    ) bind(C, name="zgemm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: ta
      character(kind=c_char), intent(in) :: tb
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine zgemm

    subroutine ssymm( &
        side, u, m, n, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="ssymm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine ssymm

    subroutine dsymm( &
        side, u, m, n, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="dsymm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine dsymm

    subroutine csymm( &
        side, u, m, n, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="csymm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine csymm

    subroutine zsymm( &
        side, u, m, n, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="zsymm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine zsymm

    subroutine chemm( &
        side, u, m, n, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="chemm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine chemm

    subroutine zhemm( &
        side, u, m, n, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="zhemm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine zhemm

    subroutine ssyrk( &
        u, t, n, k, alpha, a, &
        lda, beta, c, ldc &
    ) bind(C, name="ssyrk_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine ssyrk

    subroutine dsyrk( &
        u, t, n, k, alpha, a, &
        lda, beta, c, ldc &
    ) bind(C, name="dsyrk_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine dsyrk

    subroutine csyrk( &
        u, t, n, k, alpha, a, &
        lda, beta, c, ldc &
    ) bind(C, name="csyrk_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine csyrk
